--- a/peer-server-config.ini
+++ b/peer-server-config.ini
@@ -4,5 +4,5 @@ PEER_SERVER_PORT 	  	 	= 6000
 TRACKER_PORT	     	    = 5000
 TRACKER_SERVER_ADDRESS		= ''
 SERVER_TRACKER_BIND_PORT 	= 6000
-
-
+TEMP_DIR 					= /home/code_master5/Documents/server-temp/ 
+PROXY 						= http://172.16.16.2:3128/
