Debug tracker.py and rename ddm to multithreadeddownloader

--- a/peer-server-config.ini
+++ b/peer-server-config.ini
@@ -5,4 +5,4 @@ TRACKER_PORT	     	    = 5000
 TRACKER_SERVER_ADDRESS		= ''
 SERVER_TRACKER_BIND_PORT 	= 6000
 TEMP_DIR 					= /home/code_master5/Documents/server-temp/ 
-PROXY 						= http://172.16.16.2:3128/
+#PROXY 						= http://172.16.16.2:3128/
