--- a/peer-client-config.ini
+++ b/peer-client-config.ini
@@ -6,4 +6,4 @@ TRACKER_PORT	     	    = 5000
 TRACKER_SERVER_ADDRESS		= ''
 CLIENT_TRACKER_BIND_PORT 	= 8000
 TEMP_DIR					= /home/code_master5/Documents/client-temp/
-PROXY 						= http://172.16.16.2:3128/
+#PROXY 						= http://172.16.16.2:3128/
