Added 'range not supported' case in peer-client

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 [USER]
 #DOWNLOAD_DIR = /path/to/download/directory
 #TEMP_DIR = /path/to/temporary/directory 
-PROXY = http://172.16.16.2:3128/
+#PROXY = http://172.16.16.2:3128/
 THREADS = 8 
 TIMEOUTS = 5.0 
 RETRIES = 5
