--- a/peer-client-config.ini
+++ b/peer-client-config.ini
@@ -3,7 +3,7 @@
 
 PEER_SERVER_PORT 	  	 	= 9000
 TRACKER_PORT	     	    = 5000
-TRACKER_SERVER_ADDRESS		= ''
+TRACKER_HOST				= 192.168.43.103
 CLIENT_TRACKER_BIND_PORT 	= 8000
 #PROXY 						= http://172.16.16.2:3128/
 #DOWNLOAD_DIR 				= /path/to/download/directory
