--- a/peer-client-config.ini
+++ b/peer-client-config.ini
@@ -1,7 +1,7 @@
 ; peer-client-config.ini
 [CLIENT]
 
-PEER_SERVER_PORT 	  	 	= 9000
+CLIENT_SERVER_BIND_PORT 	= 8000
 TRACKER_PORT	     	    = 5000
 TRACKER_HOST				= 127.0.0.1
 CLIENT_TRACKER_BIND_PORT 	= 8000
