--- a/configfiles/peer-server-config.ini
+++ b/configfiles/peer-server-config.ini
@@ -5,6 +5,7 @@ PEER_SERVER_PORT 	  	 	= 6000
 TRACKER_PORT	     	    = 5000
 TRACKER_HOST				= 127.0.0.1
 SERVER_TRACKER_BIND_PORT 	= 6000
-TEMP_DIR 					= /home/code_master5/Documents/server-temp/ 
 #PROXY 						= http://172.16.16.2:3128/
+#DOWNLOAD_DIR 				= /path/to/download/directory
+TEMP_DIR 					= /home/code_master5/Downloads/ddm-server-temp/
 THREADS						= 4
